@@ -18,15 +18,13 @@
 package cmd
 
 import (
+	"github.com/spf13/cobra"
 	"github.com/spf13/pflag"
 
 	"github.com/elastic/beats/auditbeat/core"
 	"github.com/elastic/beats/libbeat/cmd"
 	"github.com/elastic/beats/metricbeat/beater"
 	"github.com/elastic/beats/metricbeat/mb/module"
-
-	// Register includes.
-	_ "github.com/elastic/beats/auditbeat/include"
 )
 
 // Name of the beat (auditbeat).
@@ -34,6 +32,12 @@ const Name = "auditbeat"
 
 // RootCmd for running auditbeat.
 var RootCmd *cmd.BeatsRootCmd
+
+// ShowCmd to display extra information.
+var ShowCmd = &cobra.Command{
+	Use:   "show",
+	Short: "Show modules information",
+}
 
 func init() {
 	create := beater.Creator(
@@ -43,4 +47,5 @@ func init() {
 	)
 	var runFlags = pflag.NewFlagSet(Name, pflag.ExitOnError)
 	RootCmd = cmd.GenRootCmdWithRunFlags(Name, "", create, runFlags)
+	RootCmd.AddCommand(ShowCmd)
 }
